; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloopmanip.c_scale_loop_frequencies.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgloopmanip.c_scale_loop_frequencies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.loop*, i32, i32)* @scale_loop_frequencies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scale_loop_frequencies(%struct.loop* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.loop*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.loop* %0, %struct.loop** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.loop*, %struct.loop** %4, align 8
  %9 = call i32* @get_loop_body(%struct.loop* %8)
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load %struct.loop*, %struct.loop** %4, align 8
  %12 = getelementptr inbounds %struct.loop, %struct.loop* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @scale_bbs_frequencies_int(i32* %10, i32 %13, i32 %14, i32 %15)
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @free(i32* %17)
  ret void
}

declare dso_local i32* @get_loop_body(%struct.loop*) #1

declare dso_local i32 @scale_bbs_frequencies_int(i32*, i32, i32, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
